fix: adjust margin for my-container on mobile and add media query for larger screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,13 +61,18 @@ p{
 }
 @media only screen and (max-width: 600px) {
   .my-container{
-    overflow: auto;
-    margin-right: 1rem;
+    margin-right: 2rem;
   }
   body{
     overflow: auto;
   }
   p{
     font-size: 18px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .my-container{
+    overflow: auto;
+    margin-right: 2rem;
   }
 }
